--- a/index.html
+++ b/index.html
@@ -11,251 +11,26 @@
     <div class="papaDiv">
       <div id="navDiv">
         <p>
-          In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]
+          <div class="Navhead">
+          <ul type="none">
+            <li>Home</li>
+          <li>About</li>
+          <li>Contact Us</li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </br></br></br></br></br>
+          <li>
+
+          </li>
+          </ul>
+          </div>
         </p>
       </div>
       <div id="scrollDiv">
-        <p>
-          Emerson uses spirituality as a major theme in the essay. Emerson
-          believed in re-imagining the divine as something large and visible,
-          which he referred to as nature; such an idea is known as
-          transcendentalism, in which one perceives a new God and a new body,
-          and becomes one with his or her surroundings. Emerson confidently
-          exemplifies transcendentalism, stating, "From the earth, as a shore, I
-          look out into that silent sea. I seem to partake its rapid
-          transformations: the active enchantment reaches my dust, and I dilate
-          and conspire with the morning wind",[8] postulating that humans and
-          wind are one. Emerson referred to nature as the "Universal Being"; he
-          believed that there was a spiritual sense of the natural world around
-          him. Depicting this sense of "Universal Being", Emerson states, "The
-          aspect of nature is devout. Like the figure of Jesus, she stands with
-          bended head, and hands folded upon the breast. The happiest man is he
-          who learns from nature the lesson of worship".[9] According to
-          Emerson, there were three spiritual problems addressed about nature
-          for humIn the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]In the essay Emerson explains that to experience the wholeness with
-          nature for which we are naturally suited, we must be separate from the
-          flaws and distractions imposed on us by society. Emerson believed that
-          solitude is the single mechanism through which we can be fully engaged
-          in the world of nature, writing "To go into solitude, a man needs to
-          retire as much from his chamber as from society. I am not solitary
-          whilst I read and write, though nobody is with me. But if a man would
-          be alone, let him look at the stars."[5] When a person experiences
-          true solitude, in nature, it "take[s] him away". Society, he says,
-          destroys wholeness, whereas "Nature, in its ministry to man, is not
-          only the material, but is also the process and the result. All the
-          parts incessantly work into each other's hands for the profit of man.
-          The wind sows the seed; the sun evaporates the sea; the wind blows the
-          vapor to the field; the ice, on the other side of the planet,
-          condenses rain on this; the rain feeds the plant; the plant feeds the
-          animal; and thus the endless circulations of the divine charity
-          nourish man."[6] Emerson defines a spiritual relationship. In nature a
-          person finds its spirit and accepts it as the Universal Being. He
-          writes: "Nature is not fixed but fluid. Spirit alters, moulds, it. ...
-          Know then that the world exists for you. For you is the phenomenon
-          perfect."[7]
-          
-        </p>
+        <p>hello interns here</p>
       </div>
+      
     </div>
   </body>
 </html>
