--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <li></li>
         </br></br></br></br></br>
           <li>
-
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-solid fa-square-envelope"></i>
+            <i class="fa-brands fa-square-instagram"></i>
           </li>
           </ul>
           </div>
@@ -33,4 +35,5 @@
       
     </div>
   </body>
+  <script src="https://kit.fontawesome.com/0c184e7cb8.js" crossorigin="anonymous"></script>
 </html>
