--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <p>
           <div class="Navhead">
           <ul type="none">
+            <img src="LOGO.jpg">
             <li>Home</li>
-          <li>About</li>
-          <li>Contact Us</li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </br></br></br></br></br>
+            <li>About</li>
+            <li>Contact Us</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <br><br><br><br><br>
           <li>
             <i class="fa-brands fa-linkedin"></i>
             <i class="fa-solid fa-square-envelope"></i>
@@ -30,10 +31,36 @@
         </p>
       </div>
       <div id="scrollDiv">
-        <p>hello interns here</p>
+
+            <div class="introbox">
+              <p>John Wick is a 2014 American neo-noir action thriller film directed by Chad Stahelski and written by Derek Kolstad. 
+                It stars Keanu Reeves, Michael Nyqvist, Alfie Allen, Adrianne Palicki, Bridget Moynahan, Dean Winters, Ian McShane, 
+                John Leguizamo, and Willem Dafoe. It is the first installment in the John Wick franchise. The story follows former 
+                assassin John Wick and his attempt to hunt down the men who broke into his home, stole his vintage car and killed his 
+                puppy, which was a last gift to him from his recently deceased wife.[6]</p>
+            </div>    
       </div>
-      
+       
     </div>
+    <div class="chacha1Div">
+      <p>I am a subsection <br>
+      very<br>
+      very<br>
+      very <br>
+      very v<br>
+      very
+    eiur gyiueryg u beruy<br>
+  yiuuoiuo<br>
+hegiuhiu<br></p>
+    </div>
+    <div class="chacha2Div">
+    I am a subsection 
+    very
+    very
+    very 
+    very v
+    very
+    </div> 
   </body>
   <script src="https://kit.fontawesome.com/0c184e7cb8.js" crossorigin="anonymous"></script>
 </html>
