--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>
           <div class="Navhead">
           <ul type="none">
-            <img src="LOGO.jpg">
+            <img src="LOGO.jpg" class="navbarlogo">
             <li>Home</li>
             <li>About</li>
             <li>Contact Us</li>
