--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,7 +64,7 @@
       <div class="container py-5">
         <div class="row mb-5">
           <div class="col-lg-6">
-            <h2 >Why We Exist</h2>
+            <h2 >Why We Emerged</h2>
             <p class="distancefromabove">At interncore, we want to solve the problem of every college students which are……..
               </p>
             <p class="text-muted drop-caps drop-caps-primary">Getting guidance in their careers and finding ways to enhance it without getting scammed and paying a huge sum in comparison to what they receive which is not even preparing them for their future goals.</p>
@@ -73,23 +73,22 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mb-4">
-            <h3>kvffbnrj
+            <h3>
               </h3>
             <p class="lead text-muted"> hvdkgh</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
           </div>
           <div class="col-lg-6 mb-4">
-            <h4>Why Us</h4>
+            <h4>How We Are Different</h4>
             <p class="text-muted"></p>
             <ul class="mb-0">
-              <li>Absence of these models in Tier-2 and Tier-3 colleges.
-              </li><li>	Flexible Work Hours: Just what a Student need.
+              <li>	Flexible Work Hours: Just what a Student need.
               </li><li>Providing an Internship based on what you know not how much you know.
-                <li>Network Building is a guarantee.</li>
+                <li>Network Building Opportunity.</li>
             </ul>
           </div>
           <div class="col-lg-12">
-            <p class="mb-0"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do <kbd>crtl + P</kbd> incididunt ut labore et dolore magna aliqua. <span class="bg-primary rounded px-1 text-white me-1">Ut enim </span> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span class="text-info">Excepteur sint occaecat cupidatat </span>non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="mb-0"> </p>
           </div>
         </div>
       </div>
@@ -102,7 +101,7 @@
               <div class="col-lg-7 text-white">
                 <p class="lead text-serif mb-1">Invest Now</p>
                 <h2 class="text-shadow mb-4">Invest Your Time Now for a Better Future</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>.</p>
                 <p class="mb-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
               <div class="col-lg-5">
@@ -134,62 +133,67 @@
        <div class="container py-5">
         <header class="mb-5">
           <p class="text-serif text-primary mb-0">Internships</p>
-          <h2 class="mb-3">Want to develop these skills</h2>
+          <h2 class="mb-3">Perks of having these skills</h2>
         </header>
-        <div class="row">
+        <span class="internshipsTypes">
+        <div class="col-lg-6">
+          <h2 >Graphic-Designing</h2>
+          <p class="text-muted drop-caps drop-caps-primary"><ul><li>Financial freedom to creative freedom this field  offers you both
+          </li><li>Helps encourage creativity 
+          </li><li>New day-to-day challenges 
+          </li><li>Work can be Showcased irrelevent of field.
+          </li><li>Flexible working hours 
+          </li><li>Exposure to new technologies while working
+          </li></ul>
+            </p>
+        </div>
+        <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+        </span>
+        <span class="internshipsTypes">
+          <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
           <div class="col-lg-6">
-            <div class="accordion pb-5" id="accordion">
-              <div class="accordion-item border-0 rounded-0 mb-2">
-                <div class="accordion-header p-0 border-0" id="headingOne">
-                  <h6 class="mb-0"><a class="accordion-button py-3 px-4" data-bs-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Sunrise prayer</a></h6>
-                </div>
-                <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
-                  <div class="pb-3 px-4 bg-primary text-white">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt. Anim pariatur cliche reprehenderit, enim eiusmod high lif</div>
-                </div>
-              </div>
-              <div class="accordion-item border-0 rounded-0 mb-2">
-                <div class="accordion-header p-0 border-0" id="headingTwo">
-                  <h6 class="mb-0"><a class="accordion-button collapsed py-3 px-4" data-bs-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Love and faith</a></h6>
-                </div>
-                <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
-                  <div class="pb-3 px-4 bg-primary text-white" >Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt Nihil anim keffiyeh helvetica.</div>
-                </div>
-              </div>
-              <div class="accordion border-0 rounded-0">
-                <div class="accordion-header p-0 border-0" id="headingThree">
-                  <h6 class="mb-0"><a class="accordion-button collapsed py-3 px-4" data-bs-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Wekend services</a></h6>
-                </div>
-                <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
-                  <div class="pb-3 px-4 bg-primary text-white">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt Nihil anim keffiyeh helvetica. Anim pariatur cliche reprehenderit, enim eiusmod high lif</div>
-                </div>
-              </div>
-            </div> 
+            <h2 >Web development      
+              </h2>
+            <p class="text-muted drop-caps drop-caps-primary"><ul><li>Build awesome websites like existing Tycoons.
+              	</li><li>New day-to-day challenges 
+                </li><li>Hottest career option at present with a fresher salary of 6LPA.
+              	</li><li>Never-ending as all want to list their websites.
+                </li><li>Be it rain or sun, coding is always on the mind.
+              	</li><li>Designing Web solutions to meet project requirements.
+                </li></ul>
+                </p>
           </div>
-          <div class="col-lg-6">    
-            <div class="row gy-4">
-              <div class="col-lg-6">
-                <p class="text-serif mb-0 text-primary text-small">Heading level five</p>
-                <h5> <span class="text-primary">1.</span>We Come To Serve</h5>
-                <p class="text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><a class="btn btn-link px-0 text-decoration-none" href="">Learn more<i class="fas fa-long-arrow-alt-right ms-2"></i></a>
-              </div>
-              <div class="col-lg-6">
-                <p class="text-serif mb-0 text-primary text-small">Heading level five</p>
-                <h5> <span class="text-primary">2.</span>Church Belief</h5>
-                <p class="text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><a class="btn btn-link px-0 text-decoration-none" href="">Learn more<i class="fas fa-long-arrow-alt-right ms-2"></i></a>
-              </div>
-              <div class="col-lg-6">
-                <p class="text-serif mb-0 text-primary text-small">Heading level five</p>
-                <h5> <span class="text-primary">3.</span>Church Mission</h5>
-                <p class="text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><a class="btn btn-link px-0 text-decoration-none" href="">Learn more<i class="fas fa-long-arrow-alt-right ms-2"></i></a>
-              </div>
-              <div class="col-lg-6">
-                <p class="text-serif mb-0 text-primary text-small">Heading level five</p>
-                <h5> <span class="text-primary">4.</span>Church Community</h5>
-                <p class="text-small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><a class="btn btn-link px-0 text-decoration-none" href="">Learn more<i class="fas fa-long-arrow-alt-right ms-2"></i></a>
-              </div>
+          
+          </span>
+          <span class="internshipsTypes">
+            <div class="col-lg-6">
+              <h2 >Content Writing
+                </h2>
+              <p class="text-muted drop-caps drop-caps-primary"><ul><li>Researching in depth of a topic.
+              </li><li>Writing your own views on the topic.
+              </li><li>Helps encourage Creative Writing Siklls.
+              </li><li>One of the underrated field in present but demanding.
+              </li><li>Can be taken as passive income source.
+              </li><li>Flexible working hours.
+              </li></ul>
+                </p>
             </div>
-          </div>
-        </div> -->
+            <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+            </span>
+            <span class="internshipsTypes">
+              <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+              <div class="col-lg-6">
+                <h2 >Social Media Marketing 
+                  </h2>
+                <p class="text-muted drop-caps drop-caps-primary"><ul><li>Post content on social media.
+                    </li><li>Work on increasing app installs, running Google Ads, SEO, and other digital marketing activities.
+                    </li><li>Work closely with the user growth & digital marketing team.
+                    </li><li>Not one of the high workload interships and require only few minutes of your day.
+                    </li></ul>
+                    </p>
+              </div>
+              </span>
+      </div></section>
         <figure class="p-4 p-lg-5 text-center bg-light mb-5">
           <blockquote class="blockquote mb-4">
             <p class="text-serif">My soul is weary with sorrow; strengthen me according to your word.</p>
