--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -133,7 +133,7 @@
        <div class="container py-5">
         <header class="mb-5">
           <p class="text-serif text-primary mb-0">Internships</p>
-          <h2 class="mb-3">Perks of having these skills</h2>
+          <h2 class="mb-3">Work on these skills under us</h2>
         </header>
         <span class="internshipsTypes">
         <div class="col-lg-6">
