--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -73,19 +73,23 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mb-4">
-            <h3>
-              </h3>
-            <p class="lead text-muted"> hvdkgh</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
-          </div>
-          <div class="col-lg-6 mb-4">
             <h4>How We Are Different</h4>
             <p class="text-muted"></p>
             <ul class="mb-0">
               <li>	Flexible Work Hours: Just what a Student need.
               </li><li>Providing an Internship based on what you know not how much you know.
                 <li>Network Building Opportunity.</li>
+                <li>Mann ki Baat with Mentor-Intern.
+                  </li><li>
+                  Regular notifications about carrier oriented programs.
+                  </li>
             </ul>
+          </div>
+          <div class="col-lg-6 mb-4">
+            <h3>
+              </h3>
+            <p class="lead text-muted"> hvdkgh</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
           </div>
           <div class="col-lg-12">
             <p class="mb-0"> </p>
@@ -99,10 +103,9 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-7 text-white">
-                <p class="lead text-serif mb-1">Invest Now</p>
+                <p class="lead text-serif mb-1">Enroll Now</p>
                 <h2 class="text-shadow mb-4">Invest Your Time Now for a Better Future</h2>
-                <p>.</p>
-                <p class="mb-4">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="mb-4">Invest time now and compound your income</p>
               </div>
               <div class="col-lg-5">
                 <div class="card rounded-0 border-0">
@@ -111,13 +114,13 @@
                     <h4 class="text-primary mb-4">Your Career</h4>
                     <div class="d-flex align-items-end justify-content-between mb-1">
                       <p class="small fw-bold text-uppercase mb-0 text-muted">In Progress</p>
-                      <p class="h4 mb-0">29%</p>
+                      <p class="h4 mb-0">10%</p>
                     </div>
                     <div class="progress mb-1">
-                      <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 29%" aria-valuenow="29" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="d-flex align-items-end justify-content-between mb-4">
-                      <p class="small fw-normal mb-0 text-muted">Completed: <span class="text-primary">29%</span></p>
+                      <p class="small fw-normal mb-0 text-muted">Completed: <span class="text-primary">10%</span></p>
                       <p class="small fw-normal mb-0 text-muted">Goal: <span class="text-primary">200%</span></p>
                     </div><a class="btn btn-primary w-100" href="#!">Join Now</a>
                   </div>
@@ -147,10 +150,10 @@
           </li></ul>
             </p>
         </div>
-        <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+        <div class="col-lg-6 "><img class="img-fluid" src="img/graphic.jpg" alt=""></div>
         </span>
         <span class="internshipsTypes">
-          <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+          <div class="col-lg-6 "><img class="img-fluid" src="img/webdevlopmeny.jpg" alt=""></div>
           <div class="col-lg-6">
             <h2 >Web development      
               </h2>
@@ -178,10 +181,10 @@
               </li></ul>
                 </p>
             </div>
-            <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+            <div class="col-lg-6 "><img class="img-fluid" src="img/contentwriter.jpg" alt=""></div>
             </span>
             <span class="internshipsTypes">
-              <div class="col-lg-6 "><img class="img-fluid" src="img/priest.jpg" alt=""></div>
+              <div class="col-lg-6 "><img class="img-fluid" src="img/socialmedia.jpg" alt=""></div>
               <div class="col-lg-6">
                 <h2 >Social Media Marketing 
                   </h2>
