--- a/InterCore/aboutus.html
+++ b/InterCore/aboutus.html
@@ -290,7 +290,7 @@
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold mb-4">
-                <img src="img/logo-1.jpg" style="height:25px ; width:25px;"> InternCore
+                <img src="img/logo-1.jpg" alt="logo" style="height:25px ; width:25px;"> InternCore
               </h6>
               <p>
                 Thanks for your interest in InternCore. For more information, feel
